wk_taa_taaqa/src/objects/Email_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Preferences</relationshipLabel>
        <relationshipName>Email_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Preferences</relationshipLabel>
        <relationshipName>Email_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NA_CCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_CCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_IFT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_IFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_TNH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_TNH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_AAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_AAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FEPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_FEPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_FTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_ITR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_ITR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_SAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_SFE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_SFI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_SIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_SST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_STR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL_STR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_AAW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_AAW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_CDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_CFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_CFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_CIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oFirst_Name__c</fullName>
        <label>Original First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oGOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original GOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oLast_Name__c</fullName>
        <label>Original Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oMobile_Phone__c</fullName>
        <label>Original Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>oNA_CCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oNA_CCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oNA_IFT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oNA_IFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oNA_TNH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oNA_TNH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_AAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_AAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_FEPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_FEPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_FTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_FTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_ITR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_ITR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_SAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_SAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_SFE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_SFE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_SFI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_SFI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_SIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_SIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_SST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_SST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oRL_STR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oRL_STR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oSP_AAW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oSP_AAW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oSP_CDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oSP_CDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oSP_CFM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oSP_CFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oSP_CFT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oSP_CFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oSP_CIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oSP_CIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oTitle__c</fullName>
        <label>Original Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Email Preferences</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Email Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>